@@ -8,6 +8,7 @@
 -- removed --enable-sourcefire and reformatted configure --help
 -- removed obsolete etc/ and its unicode.map and attribute_table.dtd
 -- josh's changes for snort2lua config binding by file
+-- fixed stream_icmp flow key init
 
 123
 -- refactored documentation
